<resources>
    <string name="app_name">GCS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>
    <string name="menu_home">Inicio</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="input_cpf_text">Digite o seu cpf</string>
    <string name="input_password_text">Digite a sua senha</string>
    <string name="authentication_type">Tipo de autenticação</string>
    <string name="text_send">ENVIAR</string>
    <string name="text_change_password">Esqueci minha senha…</string>
    <string name="icon_user_description">icon user</string>
    <string name="gcsystem_logo">GCSystem logo</string>
    <string name="fields_empty">Por favor, preencha todos os campos!</string>
    <string name="cpf_invalid">CPF invalido!</string>
    <string name="ERROR_UNEXPECTED">Erro inesperado</string>
    <string name="employee">Funcionário</string>
    <string name="lessee">Locatário</string>
    <string name="login_error">CPF/senha invalidos!</string>
    <string name="ERROR_CONNECTION">Erro de conexão.</string>
    <string name="input_email">Digite o seu email</string>
    <string name="_0">0</string>
    <string name="description_screen_send_email_code">Receber código de redefinição de senha</string>
    <string name="label_change_password">Redefinir senha</string>
    <string name="authentication">Autenticação</string>
    <string name="description_screen_send_code">Digite o código de verificação enviado para o seu E-mail.</string>
    <string name="new_password">Nova senha</string>
    <string name="new_password_repeat">Repetir senha</string>
    <string name="confirm">Confirmar</string>
    <string name="button_save">Salvar</string>
    <string name="update_password">Atualizar senha de acesso</string>
    <string name="field_email_empty">"Preencha o campo E-mail! "</string>
    <string name="MESSAGE_EMAIL_NOT_EXISTS">"Nenhum registro encontrado com esse E-mail. "</string>
    <string name="invalide_type_auth">"Tipo de autenticação inválido: "</string>
    <string name="types_empty">Sem tipos definidos</string>
    <string name="passwords_not_equals">"As senhas digitadas não correspondem. Tente novamente! "</string>
    <string name="password_empty">"Por favor, preencha os campos “senha” e “Repetir senha”."</string>
    <string name="minimum_size_password">"A senha deve conter no mínimo 8 caracteres. "</string>
    <string name="password_update_success">"Senha alterada com sucesso! "</string>
    <string name="title_activity_main_employee">MainEmployeeActivity</string>
    <string name="my_account">Minha conta</string>
    <string name="label_id">Identificação</string>
    <string name="label_name">Nome completo</string>
    <string name="label_cpf">CPF</string>
    <string name="label_birth_date">Data de nascimento</string>
    <string name="label_email">E-mail</string>
    <string name="label_role">Cargo</string>
    <string name="label_hiring_date">Data de contratação</string>
    <string name="label_contact">Contato</string>
    <string name="icon_my_account">Icone minha conta</string>
    <string name="manager_label_rent">Gerenciamento de aluguel</string>
    <string name="dev_contact_email">srmarquesms@gmail.com</string>
    <string name="label_repair">Reparos</string>
    <string name="label_condominium">Condomínio</string>
    <string name="label_type_of_problem">Tipo de problema</string>
    <string name="label_status">Status</string>
    <string name="description_button_add_repair_request">Adicionar solicitação de reparo</string>
    <string name="hint_number_apartment">Número do apartamento</string>
    <string name="label_description_problem">Descrição do problema</string>
    <string name="text_save">Salvar</string>
    <string name="text_back">Voltar</string>
    <string name="screen_description_new_repair_request">Nova solicitação de reparo</string>
    <string name="search">Pesquisar</string>
    <string name="search_is_empty">"Nenhuma informação encontrada. "</string>
    <string name="title_activity_detail_repair_request">DetailRepairRequestActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="screen_details_repair_request">Detalhes da solicitação de reparo</string>
    <string name="label_order_service">Ordem de serviço</string>
    <string name="label_collaborators">Colaboradores</string>
    <string name="info_collaborators_none">Nenhum colaborador encontrado</string>
    <string name="order_service_none">Sem ordem de serviço gerada</string>
    <string name="icon_repair_request">icone solicitação de reparo</string>
    <string name="screen_update_repair_request">Atualizar solicitação de reparo</string>
    <string name="updated_info_success">"Informações atualizadas com sucesso! "</string>
    <string name="cancel">Cancelar</string>
    <string name="delete_item_success">"Item deletado com sucesso! "</string>
    <string name="label_delete">Deletar</string>
    <string name="delete_this_item">Você deseja deletar este item?</string>
    <string name="repair_request_in_progress">"Serviços em andamento ou concluídos, não podem ser atualizados ou excluídos. "</string>
    <string name="label_orders_service">Ordens de serviço</string>
    <string name="description_button_add_order_service">Adicionar nova ordem de serviço</string>
    <string name="created_in">Criado em</string>
    <string name="label_date_reserved">Data reservada</string>
    <string name="label_date_conclusion">Data de conclusão</string>
    <string name="hint_trace">-</string>
    <string name="screen_details_order_service">Detalhes da ordem de serviço</string>
    <string name="label_description">Descrição</string>
    <string name="label_quantity">Quantidade</string>
    <string name="label_money">Valor</string>
    <string name="label_apartment">Apartamento</string>
    <string name="label_lessee_name">Nome do locatário</string>
    <string name="label_item">Item</string>
    <string name="label_items">Itens</string>
    <string name="text_remove_item">Remover item</string>
    <string name="text_add_item">Adicionar item</string>
    <string name="text_finalize_order_service">Finalizar ordem de serviço</string>
    <string name="label_back">Voltar</string>
    <string name="icon_order_service">Icone ordem de serviço</string>
    <string name="info_not_items">Nenhum item adicionado</string>
    <string name="label_items_none">Nenhum item adicionado</string>
    <string name="icon_item">Icone do item</string>
    <string name="label_value">Valor</string>
    <string name="label_add_new_item">Adicionar novo item</string>
    <string name="icon_tela_add_item_description">Icone tela add item</string>
    <string name="status_open">Em aberto</string>
    <string name="status_concluded">Concluído</string>
    <string name="icon_delete_item">Icone deletar item</string>
    <string name="status_in_progress">Em andamento</string>
    <string name="item_add_success">Item adicionado com sucesso!</string>
    <string name="finalize_order_service">Você deseja finalizar a ordem de serviço?</string>
    <string name="finalize">Finalizar</string>
    <string name="finished_os_success">Ordem de serviço finalizada com sucesso!</string>
    <string name="label_debts">Débitos</string>
    <string name="label_due_date">Data de validade</string>
    <string name="label_debtor">Devedor</string>
    <string name="icon_debt">Icone débitos</string>
    <string name="label_contracts">Contratos</string>
    <string name="label_date_contract">Data de contrato</string>
    <string name="action_auth_biometric">Autenticação Biométrica</string>
    <string name="label_active_disable">Ativar/desativar</string>
    <string name="icon_fingerprint">Icone biometria</string>
    <string name="error_hardware_biometric">Infelizmente este dispositivo não possui suporte para biometria</string>
</resources>