<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_my_account_lessee"
            android:icon="@drawable/baseline_assignment_ind_24"
            android:title="@string/my_account" />

        <item
            android:id="@+id/nav_repair_request"
            android:icon="@drawable/baseline_home_repair_service_24"
            android:title="@string/label_repair" />

        <item
            android:id="@+id/nav_debts"
            android:icon="@drawable/baseline_monetization_on_24"
            android:title="@string/label_debts" />

        <item
            android:id="@+id/nav_contracts"
            android:icon="@drawable/baseline_note_alt_24"
            android:title="@string/label_contracts" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/label_exit" />

    </group>
</menu>