<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_layout"
    tools:context=".ui.fragment.myAccountEmployee.MyAccountEmployeeFragment">

    <ImageView
        android:id="@+id/icon_my_account"
        style="@style/icon_form"
        android:contentDescription="@string/icon_my_account"
        android:src="@drawable/baseline_assignment_ind_24" />

    <TextView
        android:id="@+id/text_id"
        style="@style/text_label_form"
        android:text="@string/label_id" />

    <EditText
        android:id="@+id/edit_id"
        style="@style/edit_form"
        android:autofillHints=""
        android:enabled="false"
        android:hint="@string/label_id"
        android:inputType="number"
        android:labelFor="@id/text_id" />

    <TextView
        android:id="@+id/text_name"
        style="@style/text_label_form"
        android:text="@string/label_name" />

    <EditText
        android:id="@+id/edit_name"
        style="@style/edit_form"
        android:autofillHints=""
        android:enabled="false"
        android:hint="@string/label_name"
        android:inputType="text"
        android:labelFor="@id/text_name" />

    <TextView
        android:id="@+id/text_cpf"
        style="@style/text_label_form"
        android:text="@string/label_cpf" />

    <EditText
        android:id="@+id/edit_cpf"
        style="@style/edit_form"
        android:autofillHints=""
        android:enabled="false"
        android:hint="@string/label_cpf"
        android:inputType="number"
        android:labelFor="@id/text_cpf" />

    <TextView
        android:id="@+id/text_birth_date"
        style="@style/text_label_form"
        android:text="@string/label_birth_date" />

    <EditText
        android:id="@+id/edit_birth_date"
        style="@style/edit_form"
        android:autofillHints=""
        android:enabled="false"
        android:hint="@string/label_birth_date"
        android:inputType="date"
        android:labelFor="@id/text_birth_date" />

    <TextView
        android:id="@+id/text_email"
        style="@style/text_label_form"
        android:text="@string/label_email" />

    <EditText
        android:id="@+id/edit_email"
        style="@style/edit_form"
        android:autofillHints=""
        android:enabled="false"
        android:hint="@string/label_email"
        android:inputType="textEmailAddress"
        android:labelFor="@id/text_email" />

    <TextView
        android:id="@+id/text_role"
        style="@style/text_label_form"
        android:text="@string/label_role" />

    <EditText
        android:id="@+id/edit_rule"
        style="@style/edit_form"
        android:autofillHints=""
        android:enabled="false"
        android:hint="@string/label_role"
        android:inputType="textEmailAddress"
        android:labelFor="@id/text_role" />

    <TextView
        android:id="@+id/text_hiring_date"
        style="@style/text_label_form"
        android:text="@string/label_hiring_date" />

    <EditText
        android:id="@+id/edit_hiring_date"
        style="@style/edit_form"
        android:autofillHints=""
        android:enabled="false"
        android:hint="@string/label_hiring_date"
        android:inputType="date"
        android:labelFor="@id/text_hiring_date" />

</LinearLayout>