<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_item_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:windowBackground"
        android:padding="@dimen/padding_layout">

        <ImageView
            android:id="@+id/icon_screen_add_item"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/icon_tela_add_item_description"
            android:src="@drawable/baseline_add_shopping_cart_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_add_item"
            style="@style/text_label_form"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_screen_add_item" />

        <EditText
            android:id="@+id/edit_description"
            style="@style/edit_form"
            android:autofillHints=""
            android:hint="@string/label_description"
            android:inputType="textMultiLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_title" />

        <EditText
            android:id="@+id/edit_item_quantity"
            style="@style/edit_form"
            android:autofillHints=""
            android:hint="@string/label_quantity"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_description" />

        <EditText
            android:id="@+id/edit_item_value"
            style="@style/edit_form"
            android:autofillHints=""
            android:hint="@string/label_value"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_item_quantity" />

        <Button
            android:id="@+id/button_save_item"
            style="@style/button_style"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/button_save"
            android:textSize="7pt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_item_value" />

        <Button
            android:id="@+id/button_cancel_item"
            style="@style/button_cancel_style"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/cancel"
            android:textSize="7pt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_save_item" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>