<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_lessee"
    app:startDestination="@+id/nav_repair_request">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.brmsdi.gcsystem.ui.fragment.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_my_account_lessee"
        android:name="com.brmsdi.gcsystem.ui.fragment.myAccountLessee.MyAccountLesseeFragment"
        android:label="@string/my_account"
        tools:layout="@layout/fragment_my_account_lessee" />

    <fragment
        android:id="@+id/nav_repair_request"
        android:name="com.brmsdi.gcsystem.ui.fragment.repairRequest.RepairRequestFragment"
        android:label="@string/label_repair"
        tools:layout="@layout/fragment_repair_request" />
</navigation>