<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_employee"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.brmsdi.gcsystem.ui.fragment.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_my_account_employee"
        android:name="com.brmsdi.gcsystem.ui.fragment.myAccountEmployee.MyAccountEmployeeFragment"
        android:label="@string/my_account"
        tools:layout="@layout/fragment_my_account_employee" />

    <fragment
        android:id="@+id/nav_order_service"
        android:name="com.brmsdi.gcsystem.ui.fragment.orderService.OrderServiceFragment"
        android:label="@string/label_orders_service"
        tools:layout="@layout/fragment_my_account_employee" />
</navigation>