<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_layout"
    tools:context=".ui.activity.detailOrderService.DetailOrderServiceActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon_detail_order_service"
            style="@style/icon_form"
            android:contentDescription="@string/icon_order_service"
            android:src="@drawable/baseline_handyman_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_screen_description"
            style="@style/description_screen_form"
            android:text="@string/screen_details_order_service"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_detail_order_service" />

        <TextView
            android:id="@+id/text_id"
            style="@style/text_label_form"
            android:text="@string/label_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_screen_description" />

        <EditText
            android:id="@+id/edit_id"
            style="@style/edit_form"
            android:autofillHints=""
            android:enabled="false"
            android:hint="@string/label_id"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_id" />

        <TextView
            android:id="@+id/text_created_date_label"
            style="@style/text_label_form"
            android:text="@string/created_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_id" />

        <EditText
            android:id="@+id/edit_created_date"
            style="@style/edit_form"
            android:autofillHints=""
            android:enabled="false"
            android:hint="@string/created_in"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_created_date_label"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/text_reserved_date_label"
            style="@style/text_label_form"
            android:text="@string/label_date_reserved"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_created_date" />

        <EditText
            android:id="@+id/edit_reserved_date"
            style="@style/edit_form"
            android:autofillHints=""
            android:enabled="false"
            android:hint="@string/label_date_reserved"
            android:inputType="text"
            android:text="@string/hint_trace"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_reserved_date_label"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/text_status_label"
            style="@style/text_label_form"
            android:text="@string/label_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_reserved_date" />

        <EditText
            android:id="@+id/edit_status"
            style="@style/edit_form"
            android:autofillHints=""
            android:enabled="false"
            android:hint="@string/label_status"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_status_label" />

        <TextView
            android:id="@+id/text_label_collaborators"
            style="@style/text_label_form"
            android:text="@string/label_collaborators"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_status" />

        <Spinner
            android:id="@+id/spinner_collaborators"
            style="@style/spinner_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_form"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_label_collaborators" />

        <TextView
            android:id="@+id/text_collaborators_none"
            style="@style/text_label_form"
            android:gravity="center"
            android:text="@string/info_collaborators_none"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_collaborators" />

        <TextView
            android:id="@+id/text_label_repair_request"
            style="@style/text_label_form"
            android:layout_marginBottom="16dp"
            android:text="@string/label_repair"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_collaborators_none" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_order_service_repair_requests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_bottom_form"
            android:layout_marginBottom="@dimen/margin_bottom_form"
            app:layout_constraintBottom_toTopOf="@+id/button_finalize_order_service"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_label_repair_request" />

        <Button
            android:id="@+id/button_finalize_order_service"
            style="@style/button_colors"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/text_finalize_order_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler_order_service_repair_requests" />

        <Button
            android:id="@+id/button_back"
            style="@style/button_cancel_colors"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/label_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_finalize_order_service" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>